scripts/nullaway/original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8.txt
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:149: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return peers.get(pointToCell(x, y));
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SudokuBoard.java:186: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return units.get(pointToCell(x, y));
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ExactCoverSolver.java:64: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/Node.java:14: error: [NullAway] initializer method does not guarantee @NonNull fields left (line 11), right (line 11), up (line 11), down (line 11), head (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    Node(){
    ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:54: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                 ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:54: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            Node node = new Node(null, null, bottom, top, top);
                                       ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/DancingLinks.java:87: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/dlx/ColumnHeader.java:27: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, 0);
             ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/TargetGenerator.java:73: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/generate/BottomUpGenerator.java:69: error: [NullAway] dereferenced expression options is @Nullable
            } while (board.isSet(cell) || options.cardinality() <= 1);
                                                 ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SolverService.java:24: error: [NullAway] @NonNull static field BOARD not initialized
    private static SudokuBoard BOARD;   //board being solved
                               ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SolverService.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
    private static Class winner = null;
                         ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/SolverService.java:79: error: [NullAway] assigning @Nullable expression to @NonNull field
        winner = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoardGenerator.java:79: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/CLPBoardGenerator.java:106: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/ConstraintSolver.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/clp/ConstraintSolver.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url9582d546a9_twentylemon_sudoku_generator_tgz-pJ8-sudoku_Top95J8/src/sudoku/backtrack/BacktrackSolver.java:58: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
18 errors
